k8s/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: stephaniegiorgis
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/proxy-body-size: '10m'
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - stephaniegiorgis.ch
      secretName: stephaniegiorgis-tls
  rules:
    - host: stephaniegiorgis.ch
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: stephaniegiorgis
                port:
                  number: 3000
